// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<OverlaySpinner
  overrideVisibility={false}
/>
`;

exports[`renders spinner if fetching 1`] = `
<OverlaySpinner
  overrideVisibility={true}
/>
`;

exports[`renders tutorial if needed 1`] = `
<OverlaySpinner
  overrideVisibility={false}
/>
`;
